cabal-version:      2.4
name:               BrainFuck
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             James Butcher
maintainer:         jamesbutcher167@gmail.com

library
    hs-source-dirs:   src
    exposed-modules:  Lib
    build-depends:    base ^>=4.15.1.0
    default-language: Haskell2010

executable BrainFuck
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    base ^>=4.15.1.0
                    , BrainFuck
    default-language: Haskell2010
