cabal-version:      2.4
name:               BrainFuck
version:            0.2.0.2
description:        A brainfuck compiler written in Haskell
bug-reports:        https://github.com/KJ002/BrainFuck/issues
license:            MIT
author:             James Butcher
maintainer:         jamesbutcher167@gmail.com

library
    hs-source-dirs:   src
    exposed-modules:  Lib
    build-depends:    base ^>=4.15.1.0
    default-language: Haskell2010

executable BrainFuck
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    base ^>=4.15.1.0
                    , BrainFuck
                    , Cabal ^>=3.4.1.0
    default-language: Haskell2010

source-repository head
    type:             git
    location:         https://github.com/KJ002/BrainFuck
